--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": "^7.0",
     "monolog/monolog": "^1.23",
     "doctrine/orm": "^2.5",
-    "dflydev/doctrine-orm-service-provider": "^2.0"
+    "dflydev/doctrine-orm-service-provider": "^2.0",
+    "swiftmailer/swiftmailer": "~5.0"
   },
   "license": "MIT License",
   "autoload": {
