--- a/config.php.example
+++ b/config.php.example
@@ -3,6 +3,7 @@ return [
     'debug' => true,
     'appname' => 'Version Warner',
     'database' => [
+        'driver' => 'pdo_mysql',
         'host' => 'localhost',
         'username' => '',
         'password' => '',
