--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "doctrine/orm": "^2.5",
     "dflydev/doctrine-orm-service-provider": "^2.0",
     "swiftmailer/swiftmailer": "~5.0",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "simplepie/simplepie": "~1.5"
   },
   "license": "MIT License",
   "autoload": {
@@ -24,7 +25,7 @@
   "authors": [
     {
       "name": "Janek Ostendorf",
-      "email": "github@ozzyfant.de"
+      "email": "mail@janek-ostendorf.de"
     }
   ]
 }
